(lang dune 3.9)

(name purcellimages)

(source
 (github purcell/purcellimages2))

(authors "Steve Purcell")

(maintainers "Steve Purcell")

(license LICENSE)

(package
 (name purcellimages)
 (synopsis "Photo website")
 (description "Photo website")
 (depends ocaml dune dream))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
